Fixed some overflow issue

--- a/styles.css
+++ b/styles.css
@@ -74,6 +74,8 @@ h1 {
     min-height: 100vh;
     width: 65%;
     padding-left: 35%;
+    min-width: 466px;
+    z-index: 1;
 }
 .theme_button {
     appearance: none;
@@ -155,9 +157,9 @@ input:-webkit-autofill:active  {
 }
 .form_container {
     background-color: var(--background-color-2);
-    position: relative;
     box-shadow: 0.2vw 1vh 1vh 0 var(--shadow-1);
     min-height: 230px;
+    z-index: 1;
 }
 .create_account {
     appearance: none;
